[tool.poetry]
name = "janitor"
version = "0.5.2"
description = "Bot for performing common tasks and monitor the system."
authors = ["Xavier Arnaus <xavi@arnaus.net>"]

[tool.poetry.dependencies]
python = "^3.9"
"Mastodon.py" = "1.8.0"
psutil = "^5.9.4"
strenum = "^v0.4.9"
flask = "^2.2.3"
flask-restful = "^0.3.9"
croniter = "^1.3.8"
gitpython = "^3.1.37"
pyxavi = { git = "https://github.com/XaviArnaus/pyxavi.git", branch = "feature/make-queue-able-to-work-non-stateful" }
python-slugify = "^7.0.0"

[tool.poetry.scripts]
main = "runner:run"
validate_config = "scripts.validate_config:run"
migrate_config_0_5_0 = "scripts.migrate_config_0_5_0:run"
migrate_config_0_5_2 = "scripts.migrate_config_0_5_2:run"
migrate_config_0_5_3 = "scripts.migrate_config_0_5_3:run"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
yapf = "^0.32.0"
toml = "^0.10.2"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
freezegun = "^1.2.1"

[tool.isort]
profile = "hug"
line_length = 96
force_grid_wrap = 3

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "-ra -q -vvv --ignore-glob=storage*"
markers = ["slow"]
pythonpath = [
  "."
]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.yapf]
column_limit = 96
dedent_closing_brackets = 1
align_closing_bracket_with_visual_indent = 1
allow_split_before_dict_value = 0
blank_line_before_module_docstring = 1
each_dict_entry_on_separate_line = 1
split_all_top_level_comma_separated_values = 1
split_arguments_when_comma_terminated = 1
split_before_expression_after_opening_paren = 1
split_before_first_argument = 1
split_before_logical_operator = 0

[tool.yapfignore]
ignore_patterns = [
    "storage/*"
]

[tool.coverage.report]
skip_empty = true
branch = true

[tool.coverage.run]
omit = [
    "*/setup.py",
    "*/__main__.py",
    "*/__init__.py",
    "storage/*"
]

[build-system]
requires = ['poetry-core>=1.5.2']
build-backend = 'poetry.core.masonry.api'
